--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,3 @@
-controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
-    type: attribute
+beer_controllers:
+    resource: ../src/Beer/Infrastructure/Symfony/Controller/
+    type: annotation
