--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "behat/behat": "^3.13",
+        "friends-of-behat/symfony-extension": "^2.4",
         "friendsofphp/php-cs-fixer": "^3.41",
         "phpunit/phpunit": "^10.5",
         "symfony/browser-kit": "6.4.*",
